Adapted code to new JDA version.